--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -7,7 +7,10 @@ jobs:
   SyncBuildAndTestS:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # XXX(RLB): It would be good to just use macos-latest here, but
+        # apparently if you do that, sometimes you get an older (not latest)
+        # version.  And we require v14 in order to build the CryptoKit provider.
+        os: [ubuntu-latest, macos-14, windows-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -29,13 +32,6 @@ jobs:
           curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
           echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
-      - run: |
-          # XXX(RLB) According to the Github Runners repo, this should be the
-          # default, but without this line, we get  "error: 'cryptokit-bridge':
-          # package 'cryptokit-bridge' is using Swift tools version 5.9.0 but the
-          # installed version is 5.7.1"          
-          sudo xcode-select -s /Applications/Xcode_15.2.app
-        if: runner.os == 'macOS'
       - name: Test Full RFC Compliance
         run: cargo test --all-features --verbose --workspace
       - name: Test Bare Bones
