--- a/mls-rs/test_harness_integration/Cargo.toml
+++ b/mls-rs/test_harness_integration/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-mls-rs = { version = "0.39.0", path = "..", default-features = false, features = ["std", "external_client", "state_update"]}
+mls-rs = { version = "0.40.0", path = "..", default-features = false, features = ["std", "external_client"]}
 tonic = "0.10.2"
 prost = "0.12.1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
