--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -156,3 +156,6 @@ required-features = ["benchmark_util"]
 [[test]]
 name = "client_tests"
 required-features = ["test_util"]
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)', 'cfg(coverage_nightly)'] }
