--- a/mls-rs-crypto-openssl/Cargo.toml
+++ b/mls-rs-crypto-openssl/Cargo.toml
@@ -32,3 +32,6 @@ mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.10.0", featu
 
 [target.'cfg(mls_build_async)'.dependencies]
 async-trait = "0.1.74"
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
