--- a/mls-rs-provider-sqlite/Cargo.toml
+++ b/mls-rs-provider-sqlite/Cargo.toml
@@ -31,3 +31,6 @@ sqlite = ["rusqlite/modern_sqlite"]
 sqlite-bundled = ["sqlite", "rusqlite/bundled"]
 sqlcipher = ["sqlite", "rusqlite/sqlcipher"]
 sqlcipher-bundled = ["sqlite", "rusqlite/bundled-sqlcipher"]
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
