--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -158,4 +158,4 @@ name = "client_tests"
 required-features = ["test_util"]
 
 [lints.rust]
-unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)', 'cfg(coverage_nightly)'] }
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)', 'cfg(coverage_nightly)', 'cfg(awslc)', 'cfg(rustcrypto)'] }
