--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -44,7 +44,7 @@ jobs:
         run: cargo install --force --locked bindgen-cli
       - run: |
           echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
-          vcpkg install openssl:x64-windows sqlcipher:x64-windows
+          vcpkg install openssl:x64-windows-static-md sqlcipher:x64-windows-static-md
         if: runner.os == 'Windows'
       - run: |
           sudo apt-get install -y libsqlite3-dev
