--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -44,7 +44,8 @@ jobs:
         run: cargo install --force --locked bindgen-cli
       - run: |
           echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
-          vcpkg install openssl:x64-windows-static-md sqlcipher:x64-windows-static-md
+          echo "VCPKGRS_DYNAMIC=1" | Out-File -FilePath $env:GITHUB_ENV -Append
+          vcpkg install openssl:x64-windows sqlcipher:x64-windows
         if: runner.os == 'Windows'
       - run: |
           sudo apt-get install -y libsqlite3-dev
@@ -92,7 +93,8 @@ jobs:
         if: runner.os == 'Windows'
       - run: |
           echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
-          vcpkg install openssl:x64-windows-static-md sqlite3:x64-windows-static-md
+          echo "VCPKGRS_DYNAMIC=1" | Out-File -FilePath $env:GITHUB_ENV -Append
+          vcpkg install openssl:x64-windows sqlite3:x64-windows
         if: runner.os == 'Windows'
       - name: Test Async Full RFC
         run: cargo test --lib --test '*' --verbose --features test_util -p mls-rs
