--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -47,6 +47,8 @@ jobs:
           echo "VCPKGRS_DYNAMIC=1" | Out-File -FilePath $env:GITHUB_ENV -Append
           echo "OPENSSL_DIR=$env:VCPKG_INSTALLATION_ROOT/packages/openssl_x64-windows" | Out-File -FilePath $env:GITHUB_ENV -Append
           vcpkg install openssl:x64-windows sqlcipher:x64-windows
+          curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
+          echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
       - run: |
           sudo apt-get install -y libsqlite3-dev
@@ -97,6 +99,8 @@ jobs:
           echo "VCPKGRS_DYNAMIC=1" | Out-File -FilePath $env:GITHUB_ENV -Append
           echo "OPENSSL_DIR=$env:VCPKG_INSTALLATION_ROOT/packages/openssl_x64-windows" | Out-File -FilePath $env:GITHUB_ENV -Append
           vcpkg install openssl:x64-windows sqlite3:x64-windows
+          curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
+          echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
       - name: Test Async Full RFC
         run: cargo test --lib --test '*' --verbose --features test_util -p mls-rs
