--- a/mls-rs-crypto-rustcrypto/Cargo.toml
+++ b/mls-rs-crypto-rustcrypto/Cargo.toml
@@ -43,6 +43,7 @@ rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
 # AEAD
 aes-gcm = { version = "0.10", features = ["zeroize"] }
 chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "getrandom"] }
+generic-array = { version = "=0.14.7", default-features = false }
 aead = { version = "0.5", default-features = false, features = ["alloc", "getrandom"] }
 
 # Hash
